--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.83_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.83_translation-de-sabbamitta.json
@@ -12,7 +12,7 @@
   "sn22.83:2.3": "‚Werter Ānanda, die Idee ‚ich bin‘ kommt auf, weil man ergreift, nicht, weil man nicht ergreift. ",
   "sn22.83:2.4": "Weil man was ergreift? ",
   "sn22.83:2.5": "Die Idee ‚ich bin‘ kommt auf, weil man Form ergreift, ",
-  "sn22.83:2.6": "wenn man Gefühl ergreift, ",
+  "sn22.83:2.6": "weil man Gefühl ergreift, ",
   "sn22.83:2.7": "Wahrnehmung, wenn man Wahrnehmung ergreift, ",
   "sn22.83:2.8": "wenn man Entscheidungen ergreift ",
   "sn22.83:2.9": "und wenn man Bewusstsein ergreift, nicht, wenn man nicht ergreift. "
