--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.83_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.83_translation-de-sabbamitta.json
@@ -19,5 +19,6 @@
   "sn22.83:3.1": "Wie eine Frau oder ein Mann, jung, jugendlich, in Schmuck vernarrt. Die Person würde in einem blanken Spiegel oder einer Schale klaren Wassers ihr Spiegelbild betrachten. Sie würde hineinschauen, weil sie ergreift,  nicht, weil sie nicht ergreift. ",
   "sn22.83:3.2": "Ebenso kommt die Idee „ich bin“ auf, weil man Form ergreift, ",
   "sn22.83:3.3": "weil man Gefühl ergreift, ",
-  "sn22.83:3.4": "weil man Wahrnehmung ergreift, "
+  "sn22.83:3.4": "weil man Wahrnehmung ergreift, ",
+  "sn22.83:3.5": "weil man Entscheidungen ergreift "
 }
