--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.83_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.83_translation-de-sabbamitta.json
@@ -20,5 +20,6 @@
   "sn22.83:3.2": "Ebenso kommt die Idee „ich bin“ auf, weil man Form ergreift, ",
   "sn22.83:3.3": "weil man Gefühl ergreift, ",
   "sn22.83:3.4": "weil man Wahrnehmung ergreift, ",
-  "sn22.83:3.5": "weil man Entscheidungen ergreift "
+  "sn22.83:3.5": "weil man Entscheidungen ergreift ",
+  "sn22.83:3.6": "und weil man Bewusstsein ergreift, nicht, ohne dass man ergreift. "
 }
