--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.83_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.83_translation-de-sabbamitta.json
@@ -22,5 +22,6 @@
   "sn22.83:3.4": "weil man Wahrnehmung ergreift, ",
   "sn22.83:3.5": "weil man Entscheidungen ergreift ",
   "sn22.83:3.6": "und weil man Bewusstsein ergreift, nicht, ohne dass man ergreift. ",
-  "sn22.83:4.1": "Was denkst du, werter Ānanda? "
+  "sn22.83:4.1": "Was denkst du, werter Ānanda? ",
+  "sn22.83:4.2": "Ist Form beständig oder unbeständig?“ "
 }
