--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.83_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.83_translation-de-sabbamitta.json
@@ -31,5 +31,6 @@
   "sn22.83:4.7": "‚Ist Bewusstsein beständig oder unbeständig?‘ ",
   "sn22.83:4.8": "‚Unbeständig, werter Freund.‘ ",
   "sn22.83:4.9": "‚Daher solltest du jegliche Art … sehen … ",
-  "sn22.83:4.10": "Wenn er das sieht … "
+  "sn22.83:4.10": "Wenn er das sieht … ",
+  "sn22.83:4.11": "Er versteht: „… es gibt keine Rückkehr mehr zu irgendeinem Daseinszustand.“‘ "
 }
