--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -9,7 +9,7 @@
   "pli-tv-kd13:1.1.5": "adding, “What should I do now?” ",
   "pli-tv-kd13:1.1.6": "They told the Buddha. ",
   "pli-tv-kd13:1.1.7": "“Well then, the Sangha should give the monk Udāyī the trial period of six days for one unconcealed offense of intentional emission of semen. ",
-  "pli-tv-kd13:1.2.1": "And it should be given like this: ",
+  "pli-tv-kd13:1.2.1": "And it should be given like this. ",
   "pli-tv-kd13:1.2.2.0": "1.1 Trial periods for those with unconcealed offenses ",
   "pli-tv-kd13:1.2.2.1": "“The monk Udāyī should approach the Sangha, put his upper robe over one shoulder, pay respect at the feet of the senior monks, squat on his heels, raise his joined palms, and say: ",
   "pli-tv-kd13:1.2.3": "‘Venerables, I’ve committed one unconcealed offense of intentional emission of semen. ",
