--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -22,7 +22,7 @@
   "pli-tv-kd13:1.3.2": "‘Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd13:1.3.3": "The monk Udāyī has committed one unconcealed offense of intentional emission of semen. ",
   "pli-tv-kd13:1.3.4": "He’s asking the Sangha for the trial period of six days for that offense. ",
-  "pli-tv-kd13:1.3.5": "If it seems appropriate to the Sangha, the Sangha should give him the trial period of six days. ",
+  "pli-tv-kd13:1.3.5": "If it seems appropriate to the Sangha, the Sangha should give him that trial period. ",
   "pli-tv-kd13:1.3.6": "This is the motion. ",
   "pli-tv-kd13:1.3.7": "Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd13:1.3.8": "The monk Udāyī has committed one unconcealed offense of intentional emission of semen. ",
