--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -27,8 +27,8 @@
   "pli-tv-kd13:1.3.7": "Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd13:1.3.8": "The monk Udāyī has committed one unconcealed offense of intentional emission of semen. ",
   "pli-tv-kd13:1.3.9": "He’s asking the Sangha for the trial period of six days for that offense. ",
-  "pli-tv-kd13:1.3.10": "The Sangha gives him the trial period of six days. ",
-  "pli-tv-kd13:1.3.11": "Any monk who approves of giving him the trial period of six days for that offense should remain silent. ",
+  "pli-tv-kd13:1.3.10": "The Sangha gives him that trial period. ",
+  "pli-tv-kd13:1.3.11": "Any monk who approves of giving him that trial period of six days should remain silent. ",
   "pli-tv-kd13:1.3.12": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd13:1.3.13": "For the second time I speak on this matter. ",
   "pli-tv-kd13:1.3.14": "Please, Venerables, I ask the Sangha to listen. ",
