--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -34,15 +34,15 @@
   "pli-tv-kd13:1.3.14": "Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd13:1.3.15": "The monk Udāyī has committed one unconcealed offense of intentional emission of semen. ",
   "pli-tv-kd13:1.3.16": "He’s asking the Sangha for the trial period of six days for that offense. ",
-  "pli-tv-kd13:1.3.17": "The Sangha gives him the trial period of six days for that offense. ",
-  "pli-tv-kd13:1.3.18": "Any monk who approves of giving him the trial period of six days for that offense should remain silent. ",
+  "pli-tv-kd13:1.3.17": "The Sangha gives him that trial period. ",
+  "pli-tv-kd13:1.3.18": "Any monk who approves of giving him that trial period of six days should remain silent. ",
   "pli-tv-kd13:1.3.19": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd13:1.3.20": "For the third time I speak on this matter. ",
   "pli-tv-kd13:1.3.21": "Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd13:1.3.22": "The monk Udāyī has committed one unconcealed offense of intentional emission of semen. ",
   "pli-tv-kd13:1.3.23": "He’s asking the Sangha for the trial period of six days for that offense. ",
-  "pli-tv-kd13:1.3.24": "The Sangha gives him the trial period of six days for that offense. ",
-  "pli-tv-kd13:1.3.25": "Any monk who approves of giving him the trial period of six days for that offense should remain silent. ",
+  "pli-tv-kd13:1.3.24": "The Sangha gives him the trial period. ",
+  "pli-tv-kd13:1.3.25": "Any monk who approves of giving him that trial period of six days should remain silent. ",
   "pli-tv-kd13:1.3.26": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd13:1.3.27": "The Sangha has given the monk Udāyī the trial period of six days for one unconcealed offense of intentional emission of semen. ",
   "pli-tv-kd13:1.3.28": "The Sangha approves and is therefore silent. I will remember it thus.’” ",
