--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -73,7 +73,7 @@
   "pli-tv-kd13:2.3.3": "The monk Udāyī had committed one unconcealed offense of intentional emission of semen. ",
   "pli-tv-kd13:2.3.4": "He asked the Sangha to give him the trial period of six days for that offense, ",
   "pli-tv-kd13:2.3.5": "which it did. ",
-  "pli-tv-kd13:2.3.6": "He’s now completed the trial period and is asking the Sangha for rehabilitation. ",
+  "pli-tv-kd13:2.3.6": "He’s now completed that trial period and is asking the Sangha for rehabilitation. ",
   "pli-tv-kd13:2.3.7": "If it seems appropriate to the Sangha, the Sangha should rehabilitate him. ",
   "pli-tv-kd13:2.3.8": "This is the motion. ",
   "pli-tv-kd13:2.3.9": "Please, Venerables, I ask the Sangha to listen. ",
