--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -78,17 +78,17 @@
   "pli-tv-kd13:2.3.8": "This is the motion. ",
   "pli-tv-kd13:2.3.9": "Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd13:2.3.10": "The monk Udāyī had committed one unconcealed offense of intentional emission of semen. ",
-  "pli-tv-kd13:2.3.11": "He asked the Sangha for the trial period of six days for that offense, ",
-  "pli-tv-kd13:2.3.12": "and the Sangha gave him the trial period. ",
-  "pli-tv-kd13:2.3.13": "He’s now completed the trial period and is asking the Sangha for rehabilitation. ",
+  "pli-tv-kd13:2.3.11": "He asked the Sangha to give him the trial period of six days for that offense, ",
+  "pli-tv-kd13:2.3.12": "which it did. ",
+  "pli-tv-kd13:2.3.13": "He’s now completed that trial period and is asking the Sangha for rehabilitation. ",
   "pli-tv-kd13:2.3.14": "The Sangha rehabilitates him. ",
   "pli-tv-kd13:2.3.15": "Any monk who approves of rehabilitating him should remain silent. ",
   "pli-tv-kd13:2.3.16": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd13:2.3.17": "For the second time I speak on this matter. ",
   "pli-tv-kd13:2.3.18": "Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd13:2.3.19": "The monk Udāyī had committed one unconcealed offense of intentional emission of semen. ",
-  "pli-tv-kd13:2.3.20": "He asked the Sangha for the trial period of six days for that offense, ",
-  "pli-tv-kd13:2.3.21": "and the Sangha gave him the trial period. ",
+  "pli-tv-kd13:2.3.20": "He asked the Sangha to give him the trial period of six days for that offense, ",
+  "pli-tv-kd13:2.3.21": "which it did. ",
   "pli-tv-kd13:2.3.22": "He’s now completed the trial period and is asking the Sangha for rehabilitation. ",
   "pli-tv-kd13:2.3.23": "The Sangha rehabilitates him. ",
   "pli-tv-kd13:2.3.24": "Any monk who approves of rehabilitating him should remain silent. ",
