--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -89,7 +89,7 @@
   "pli-tv-kd13:2.3.19": "The monk Udāyī had committed one unconcealed offense of intentional emission of semen. ",
   "pli-tv-kd13:2.3.20": "He asked the Sangha to give him the trial period of six days for that offense, ",
   "pli-tv-kd13:2.3.21": "which it did. ",
-  "pli-tv-kd13:2.3.22": "He’s now completed the trial period and is asking the Sangha for rehabilitation. ",
+  "pli-tv-kd13:2.3.22": "He’s now completed that trial period and is asking the Sangha for rehabilitation. ",
   "pli-tv-kd13:2.3.23": "The Sangha rehabilitates him. ",
   "pli-tv-kd13:2.3.24": "Any monk who approves of rehabilitating him should remain silent. ",
   "pli-tv-kd13:2.3.25": "Any monk who doesn’t approve should speak up. ",
