--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -97,13 +97,13 @@
   "pli-tv-kd13:2.3.27": "Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd13:2.3.28": "The monk Udāyī had committed one unconcealed offense of intentional emission of semen. ",
   "pli-tv-kd13:2.3.29": "He asked the Sangha to give him the trial period of six days for that offense, ",
-  "pli-tv-kd13:2.3.30": "and the Sangha gave him the trial period. ",
+  "pli-tv-kd13:2.3.30": "which it did. ",
   "pli-tv-kd13:2.3.31": "He’s now completed that trial period and is asking the Sangha for rehabilitation. ",
   "pli-tv-kd13:2.3.32": "The Sangha rehabilitates him. ",
   "pli-tv-kd13:2.3.33": "Any monk who approves of rehabilitating him should remain silent. ",
   "pli-tv-kd13:2.3.34": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd13:2.3.35": "The Sangha has rehabilitated the monk Udāyī. ",
-  "pli-tv-kd13:2.3.36": "The Sangha approves and is therefore silent. I will remember it thus.’” ",
+  "pli-tv-kd13:2.3.36": "The Sangha approves and is therefore silent. I’ll remember it thus.’” ",
   "pli-tv-kd13:3.1.0": "1.3 Probation for those with offenses concealed for one day ",
   "pli-tv-kd13:3.1.1": "On one occasion Venerable Udāyī had committed one offense of intentional emission of semen, concealed for one day. ",
   "pli-tv-kd13:3.1.2": "He told the monks about this, ",
