--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -110,7 +110,7 @@
   "pli-tv-kd13:3.1.4": "adding, “What should I do now?” ",
   "pli-tv-kd13:3.1.5": "They told the Buddha. ",
   "pli-tv-kd13:3.1.6": "“Well then, the Sangha should give the monk Udāyī probation for one day for one offense of intentional emission of semen, concealed for one day. ",
-  "pli-tv-kd13:3.2.1": "And it should be given like this: ",
+  "pli-tv-kd13:3.2.1": "And it should be given like this. ",
   "pli-tv-kd13:3.2.2": "The monk Udāyī should approach the Sangha, put his upper robe over one shoulder, pay respect at the feet of the senior monks, squat on his heels, raise his joined palms, and say: ",
   "pli-tv-kd13:3.2.3": "‘Venerables, I’ve committed one offense of intentional emission of semen, concealed for one day. ",
   "pli-tv-kd13:3.2.4": "I ask the Sangha for probation for one day for that offense.’ ",
@@ -131,13 +131,13 @@
   "pli-tv-kd13:3.3.13": "For the second time I speak on this matter. … ",
   "pli-tv-kd13:3.3.14": "For the third time I speak on this matter. … ",
   "pli-tv-kd13:3.3.15": "The Sangha has given the monk Udāyī probation for one day for one offense of intentional emission of semen, concealed for one day. ",
-  "pli-tv-kd13:3.3.16": "The Sangha approves and is therefore silent. I will remember it thus.’” ",
+  "pli-tv-kd13:3.3.16": "The Sangha approves and is therefore silent. I’ll remember it thus.’” ",
   "pli-tv-kd13:4.1.0": "1.4 Trial periods for those with offenses concealed for one day ",
-  "pli-tv-kd13:4.1.1": "When he had completed the probation, he told the monks, ",
+  "pli-tv-kd13:4.1.1": "When he had completed that probation, he told the monks, ",
   "pli-tv-kd13:4.1.2": "“I had committed one offense of intentional emission of semen, concealed for one day. ",
-  "pli-tv-kd13:4.1.3": "I asked the Sangha for probation for one day for that offense. ",
-  "pli-tv-kd13:4.1.4": "The Sangha gave me that probation, ",
-  "pli-tv-kd13:4.1.5": "and I’ve now completed it. ",
+  "pli-tv-kd13:4.1.3": "I asked the Sangha to give me probation for one day for that offense, ",
+  "pli-tv-kd13:4.1.4": "which it did. ",
+  "pli-tv-kd13:4.1.5": "I’ve now completed it. ",
   "pli-tv-kd13:4.1.6": "What should I do now?” ",
   "pli-tv-kd13:4.1.7": "They told the Buddha. ",
   "pli-tv-kd13:4.1.8": "“Well then, the Sangha should give the monk Udāyī the trial period of six days for one offense of intentional emission of semen, concealed for one day. ",
