--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -141,7 +141,7 @@
   "pli-tv-kd13:4.1.6": "What should I do next?” ",
   "pli-tv-kd13:4.1.7": "They told the Buddha. ",
   "pli-tv-kd13:4.1.8": "“Well then, the Sangha should give the monk Udāyī the trial period of six days for one offense of intentional emission of semen, concealed for one day. ",
-  "pli-tv-kd13:4.2.1": "And it should be given like this: ",
+  "pli-tv-kd13:4.2.1": "And it should be given like this. ",
   "pli-tv-kd13:4.2.2": "The monk Udāyī should approach the Sangha, put his upper robe over one shoulder, pay respect at the feet of the senior monks, squat on his heels, raise his joined palms, ",
   "pli-tv-kd13:4.2.3": "and say: ",
   "pli-tv-kd13:4.2.4": "‘Venerables, I had committed one offense of intentional emission of semen, concealed for one day. ",
