--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -147,13 +147,13 @@
   "pli-tv-kd13:4.2.4": "‘Venerables, I had committed one offense of intentional emission of semen, concealed for one day. ",
   "pli-tv-kd13:4.2.5": "I asked the Sangha to give me probation for one day for that offense, ",
   "pli-tv-kd13:4.2.6": "which it did. ",
-  "pli-tv-kd13:4.2.7": "I’ve now completed that probation and I ask the Sangha for the trial period of six days for that offense.’ ",
+  "pli-tv-kd13:4.2.7": "I’ve now completed that probation and ask the Sangha for the trial period of six days.’ ",
   "pli-tv-kd13:4.2.8": "And he should ask a second ",
   "pli-tv-kd13:4.2.9": "and a third time. ",
   "pli-tv-kd13:4.3.1": "A competent and capable monk should then inform the Sangha: ",
   "pli-tv-kd13:4.3.2": "‘Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd13:4.3.3": "The monk Udāyī had committed one offense of intentional emission of semen, concealed for one day. ",
-  "pli-tv-kd13:4.3.4": "He asked the Sangha for probation for one day for that offense, ",
+  "pli-tv-kd13:4.3.4": "He asked the Sangha to give him probation for one day for that offense, ",
   "pli-tv-kd13:4.3.5": "and the Sangha gave him that probation. ",
   "pli-tv-kd13:4.3.6": "He’s now completed that probation and is asking the Sangha for the trial period of six days for that offense. ",
   "pli-tv-kd13:4.3.7": "If it seems appropriate to the Sangha, the Sangha should give him the trial period of six days. ",
