--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -161,9 +161,9 @@
   "pli-tv-kd13:4.3.9": "Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd13:4.3.10": "The monk Udāyī had committed one offense of intentional emission of semen, concealed for one day. ",
   "pli-tv-kd13:4.3.11": "He asked the Sangha to give him probation for one day for that offense, ",
-  "pli-tv-kd13:4.3.12": "and the Sangha gave him that probation. ",
-  "pli-tv-kd13:4.3.13": "He’s now completed that probation and is asking the Sangha for the trial period of six days for that offense. ",
-  "pli-tv-kd13:4.3.14": "The Sangha gives him the trial period of six days. ",
+  "pli-tv-kd13:4.3.12": "which it did. ",
+  "pli-tv-kd13:4.3.13": "He’s now completed that probation and is asking the Sangha for the trial period of six days. ",
+  "pli-tv-kd13:4.3.14": "The Sangha gives him that trial period. ",
   "pli-tv-kd13:4.3.15": "Any monk who approves of giving him the trial period of six days should remain silent. ",
   "pli-tv-kd13:4.3.16": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd13:4.3.17": "For the second time I speak on this matter. … ",
