--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -181,13 +181,13 @@
   "pli-tv-kd13:5.1.8": "What should I do next?” ",
   "pli-tv-kd13:5.1.9": "They told the Buddha. ",
   "pli-tv-kd13:5.1.10": "“Well then, the Sangha should rehabilitate the monk Udāyī. ",
-  "pli-tv-kd13:5.2.1": "And it should be done like this: ",
+  "pli-tv-kd13:5.2.1": "And it should be done like this. ",
   "pli-tv-kd13:5.2.2": "The monk Udāyī should approach the Sangha, put his upper robe over one shoulder, pay respect at the feet of the senior monks, squat on his heels, raise his joined palms, ",
   "pli-tv-kd13:5.2.3": "and say: ",
   "pli-tv-kd13:5.2.4": "‘I had committed one offense of intentional emission of semen, concealed for one day. ",
-  "pli-tv-kd13:5.2.5": "I asked the Sangha for probation for one day for that offense, ",
-  "pli-tv-kd13:5.2.6": "and the Sangha gave me that probation. ",
-  "pli-tv-kd13:5.2.7": "When I had completed the probation, I asked the Sangha for the trial period of six days for that offense, ",
+  "pli-tv-kd13:5.2.5": "I asked the Sangha to give me probation for one day for that offense, ",
+  "pli-tv-kd13:5.2.6": "which it did. ",
+  "pli-tv-kd13:5.2.7": "When I had completed that probation, I asked the Sangha to give me the trial period of six days, ",
   "pli-tv-kd13:5.2.8": "and the Sangha gave me the trial period. ",
   "pli-tv-kd13:5.2.9": "I’ve now completed the trial period and I ask the Sangha for rehabilitation.’ ",
   "pli-tv-kd13:5.2.10": "And he should ask a second ",
