--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -188,8 +188,8 @@
   "pli-tv-kd13:5.2.5": "I asked the Sangha to give me probation for one day for that offense, ",
   "pli-tv-kd13:5.2.6": "which it did. ",
   "pli-tv-kd13:5.2.7": "When I had completed that probation, I asked the Sangha to give me the trial period of six days, ",
-  "pli-tv-kd13:5.2.8": "and the Sangha gave me the trial period. ",
-  "pli-tv-kd13:5.2.9": "I’ve now completed the trial period and I ask the Sangha for rehabilitation.’ ",
+  "pli-tv-kd13:5.2.8": "which it did. ",
+  "pli-tv-kd13:5.2.9": "I’ve now completed the trial period and ask the Sangha for rehabilitation.’ ",
   "pli-tv-kd13:5.2.10": "And he should ask a second ",
   "pli-tv-kd13:5.2.11": "and a third time. ",
   "pli-tv-kd13:5.3.1": "A competent and capable monk should then inform the Sangha: ",
