--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -195,7 +195,7 @@
   "pli-tv-kd13:5.3.1": "A competent and capable monk should then inform the Sangha: ",
   "pli-tv-kd13:5.3.2": "‘Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd13:5.3.3": "The monk Udāyī had committed one offense of intentional emission of semen, concealed for one day. ",
-  "pli-tv-kd13:5.3.4": "He asked the Sangha for probation for one day for that offense, ",
+  "pli-tv-kd13:5.3.4": "He asked the Sangha to give him probation for one day for that offense, ",
   "pli-tv-kd13:5.3.5": "and the Sangha gave him that probation. ",
   "pli-tv-kd13:5.3.6": "When he had completed the probation, he asked the Sangha for the trial period of six days for that offense, ",
   "pli-tv-kd13:5.3.7": "and the Sangha gave him the trial period. ",
