--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -197,9 +197,9 @@
   "pli-tv-kd13:5.3.3": "The monk Udāyī had committed one offense of intentional emission of semen, concealed for one day. ",
   "pli-tv-kd13:5.3.4": "He asked the Sangha to give him probation for one day for that offense, ",
   "pli-tv-kd13:5.3.5": "which it did. ",
-  "pli-tv-kd13:5.3.6": "When he had completed the probation, he asked the Sangha for the trial period of six days for that offense, ",
-  "pli-tv-kd13:5.3.7": "and the Sangha gave him the trial period. ",
-  "pli-tv-kd13:5.3.8": "He’s now completed the trial period and is asking the Sangha for rehabilitation. ",
+  "pli-tv-kd13:5.3.6": "When he had completed that probation, he asked the Sangha to give him the trial period of six days, ",
+  "pli-tv-kd13:5.3.7": "which it did. ",
+  "pli-tv-kd13:5.3.8": "He’s now completed that trial period and is asking the Sangha for rehabilitation. ",
   "pli-tv-kd13:5.3.9": "If it seems appropriate to the Sangha, the Sangha should rehabilitate him. ",
   "pli-tv-kd13:5.3.10": "This is the motion. ",
   "pli-tv-kd13:5.3.11": "Please, Venerables, I ask the Sangha to listen. ",
