--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -560,11 +560,11 @@
   "pli-tv-kd13:14.3.2": "The monk Udāyī should approach the Sangha, put his upper robe over one shoulder, pay respect at the feet of the senior monks, squat on his heels, raise his joined palms, ",
   "pli-tv-kd13:14.3.3": "and say: ",
   "pli-tv-kd13:14.3.4": "‘I had committed one offense of intentional emission of semen, concealed for a half-month. ",
-  "pli-tv-kd13:14.3.5": "I asked the Sangha for probation for a half-month for that offense, ",
-  "pli-tv-kd13:14.3.6": "and the Sangha gave me that probation. ",
+  "pli-tv-kd13:14.3.5": "I asked the Sangha to give me probation for a half-month for that offense, ",
+  "pli-tv-kd13:14.3.6": "which it did. ",
   "pli-tv-kd13:14.3.7": "While on probation, I committed one offense of intentional emission of semen, concealed for five days. ",
   "pli-tv-kd13:14.3.8": "I asked the Sangha to send me back to the beginning for that offense, ",
-  "pli-tv-kd13:14.3.9": "and the Sangha sent me back to the beginning. ",
+  "pli-tv-kd13:14.3.9": "which it did. ",
   "pli-tv-kd13:14.3.10": "I now ask the Sangha for probation for that offense, simultaneous with the probation for the previous offense.’ ",
   "pli-tv-kd13:14.3.11": "And he should ask a second ",
   "pli-tv-kd13:14.3.12": "and a third time. ",
