--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -581,11 +581,11 @@
   "pli-tv-kd13:14.3.23": "This is the motion. … ",
   "pli-tv-kd13:14.3.24": "‘Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd13:14.3.25": "The monk Udāyī had committed one offense of intentional emission of semen, concealed for a half-month. ",
-  "pli-tv-kd13:14.3.26": "He asked the Sangha for probation for a half-month for that offense, ",
-  "pli-tv-kd13:14.3.27": "and the Sangha gave him that probation. ",
-  "pli-tv-kd13:14.3.28": "While he was on probation, he committed one offense of intentional emission of semen, concealed for five days. ",
+  "pli-tv-kd13:14.3.26": "He asked the Sangha to give him probation for a half-month for that offense, ",
+  "pli-tv-kd13:14.3.27": "which it did. ",
+  "pli-tv-kd13:14.3.28": "While on probation, he committed one offense of intentional emission of semen, concealed for five days. ",
   "pli-tv-kd13:14.3.29": "He asked the Sangha to send him back to the beginning for that offense, ",
-  "pli-tv-kd13:14.3.30": "and the Sangha sent him back to the beginning. ",
+  "pli-tv-kd13:14.3.30": "which it did. ",
   "pli-tv-kd13:14.3.31": "He’s now asking the Sangha for probation for that offense, simultaneous with the probation for the previous offense. ",
   "pli-tv-kd13:14.3.32": "The Sangha gives him that simultaneous probation. ",
   "pli-tv-kd13:14.3.33": "Any monk who approves of giving him that simultaneous probation should remain silent. ",
