--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -589,7 +589,7 @@
   "pli-tv-kd13:14.3.31": "He’s now asking the Sangha for probation for that offense, simultaneous with the probation for the previous offense. ",
   "pli-tv-kd13:14.3.32": "The Sangha gives him that simultaneous probation. ",
   "pli-tv-kd13:14.3.33": "Any monk who approves of giving him that simultaneous probation should remain silent. ",
-  "pli-tv-kd13:14.3.34": "Any monk who does not approve should speak up. ",
+  "pli-tv-kd13:14.3.34": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd13:14.3.35": "For the second time I speak on this matter. … ",
   "pli-tv-kd13:14.3.36": "For the third time I speak on this matter. … ",
   "pli-tv-kd13:14.3.37": "The Sangha has given the monk Udāyī probation for one offense of intentional emission of semen—concealed for five days and committed while on probation—simultaneous with the probation for the previous offense. ",
